// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`both option enable 1`] = `
"📙 Defined catalogs in pnpm-workspace.yaml:
  (none)

📦 Catalogable Dependencies (1):
  typescript:
    /packages/package1 (package1) : ^5.7.3
    /packages/package2 (package2) : ^5.6.0

"
`;

exports[`catalog only 1`] = `
"📙 Defined catalogs in pnpm-workspace.yaml:
  (none)
"
`;

exports[`default 1`] = `
"📙 Defined catalogs in pnpm-workspace.yaml:
  (none)

📦 Catalogable Dependencies (1):
  typescript:
    /packages/package1 (package1) : ^5.7.3
    /packages/package2 (package2) : ^5.6.0

"
`;

exports[`dependency only 1`] = `
"📦 Catalogable Dependencies (1):
  typescript:
    /packages/package1 (package1) : ^5.7.3
    /packages/package2 (package2) : ^5.6.0

"
`;
